; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/rsi/extr_rsi_91x_sdio.c_rsi_setclock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/rsi/extr_rsi_91x_sdio.c_rsi_setclock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsi_hw = type { i64 }
%struct.rsi_91x_sdiodev = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.mmc_host* }
%struct.mmc_host = type { i32, %struct.TYPE_8__, %struct.TYPE_5__* }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_5__ = type { i32 (%struct.mmc_host*, %struct.TYPE_8__*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rsi_hw*, i32)* @rsi_setclock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rsi_setclock(%struct.rsi_hw* %0, i32 %1) #0 {
  %3 = alloca %struct.rsi_hw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.rsi_91x_sdiodev*, align 8
  %6 = alloca %struct.mmc_host*, align 8
  %7 = alloca i32, align 4
  store %struct.rsi_hw* %0, %struct.rsi_hw** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.rsi_hw*, %struct.rsi_hw** %3, align 8
  %9 = getelementptr inbounds %struct.rsi_hw, %struct.rsi_hw* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.rsi_91x_sdiodev*
  store %struct.rsi_91x_sdiodev* %11, %struct.rsi_91x_sdiodev** %5, align 8
  %12 = load %struct.rsi_91x_sdiodev*, %struct.rsi_91x_sdiodev** %5, align 8
  %13 = getelementptr inbounds %struct.rsi_91x_sdiodev, %struct.rsi_91x_sdiodev* %12, i32 0, i32 0
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load %struct.mmc_host*, %struct.mmc_host** %17, align 8
  store %struct.mmc_host* %18, %struct.mmc_host** %6, align 8
  %19 = load i32, i32* %4, align 4
  %20 = mul nsw i32 %19, 1000
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load %struct.mmc_host*, %struct.mmc_host** %6, align 8
  %23 = getelementptr inbounds %struct.mmc_host, %struct.mmc_host* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = icmp sgt i32 %21, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %2
  %27 = load %struct.mmc_host*, %struct.mmc_host** %6, align 8
  %28 = getelementptr inbounds %struct.mmc_host, %struct.mmc_host* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  store i32 %29, i32* %7, align 4
  br label %30

30:                                               ; preds = %26, %2
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.mmc_host*, %struct.mmc_host** %6, align 8
  %33 = getelementptr inbounds %struct.mmc_host, %struct.mmc_host* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %33, i32 0, i32 0
  store i32 %31, i32* %34, align 4
  %35 = load %struct.mmc_host*, %struct.mmc_host** %6, align 8
  %36 = getelementptr inbounds %struct.mmc_host, %struct.mmc_host* %35, i32 0, i32 2
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 0
  %39 = load i32 (%struct.mmc_host*, %struct.TYPE_8__*)*, i32 (%struct.mmc_host*, %struct.TYPE_8__*)** %38, align 8
  %40 = load %struct.mmc_host*, %struct.mmc_host** %6, align 8
  %41 = load %struct.mmc_host*, %struct.mmc_host** %6, align 8
  %42 = getelementptr inbounds %struct.mmc_host, %struct.mmc_host* %41, i32 0, i32 1
  %43 = call i32 %39(%struct.mmc_host* %40, %struct.TYPE_8__* %42)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
